fix: remember me in same line and toggle visibility for password
* Update +page.svelte

* Update Login.css

--- a/src/routes/login/Login.css
+++ b/src/routes/login/Login.css
@@ -35,7 +35,7 @@ main {
     max-w-[400px] sm:max-w-[500px] md:max-w-[600px] lg:max-w-[700px]
     sm:min-h-[350px] md:min-h-[400px] lg:min-h-[420px]
     rounded-2xl bg-[#1e293b] border border-cyan-600 border-solid
-    p-6 sm:p-8 md:p-10 text-white;
+    p-6 sm:p-8 md:p-10 text-white mt-[60px]  ;
 
   animation: flicker 2s infinite ease-in-out;
 }
@@ -57,22 +57,22 @@ main {
 }
 
 .login input {
-  @apply w-full mb-4 px-4 py-2 
+  @apply w-full mb-4 px-4 py-2 pr-10
   rounded-md border border-gray-600 
   bg-[#334155] text-white placeholder-gray-400 
   focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
 
 .options {
-  @apply flex justify-between items-center mb-6 text-sm;
+  @apply flex justify-between items-center mb-5 text-sm;
 }
 
 .remember {
-  @apply flex items-center gap-2 text-gray-300;
+  @apply flex items-center gap-0 text-gray-300 whitespace-nowrap;
 }
 
-.check{
-  @apply w-[20px] h-[20px] mr-[10px];
+.checkbox{
+  @apply w-[20px] h-[20px] mr-[10px] mt-[15px];
 }
 
 .forgot {
